--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<title>Health & Beauty & fin</title>
-  <meta http-equiv="refresh" content="60; url=https://fortunatelychastise.com/q12rx32tnz?key=c14ffe855554a596e7cd547bbaff0ab2">
+<title>Health & Beauty</title>
+  <meta http-equiv="refresh" content="12; url=https://fortunatelychastise.com/q12rx32tnz?key=c14ffe855554a596e7cd547bbaff0ab2">
 <script type='text/javascript' src='//luxuriousbreastfeeding.com/ae/bc/00/aebc00e724b2ef05f4adaf56693ba074.js'></script>
  
 </head>
@@ -10,7 +10,7 @@
 	<h1 style="text-align: center;">Best Clips</h1>
 	<script async="async" data-cfasync="false" src="//fortunatelychastise.com/c2a1f65263c7acc5a096027dee0b199b/invoke.js"></script>
 <div id="container-c2a1f65263c7acc5a096027dee0b199b"></div>
-	<script type="text/javascript">
+	<script type="text/javascript" style="text-align: center;">
 	atOptions = {
 		'key' : '4131bf1619c86c2ef2e4dbc957be0be9',
 		'format' : 'iframe',
@@ -22,7 +22,7 @@
 <script type="text/javascript" src="//fortunatelychastise.com/4131bf1619c86c2ef2e4dbc957be0be9/invoke.js"></script>
 	<h1 style="text-align: center;">Best Hot Clips</h1>
 	<script async="async" data-cfasync="false" src="//fortunatelychastise.com/97976d73e3c6b8d3ae2df257dc5af2b1/invoke.js"></script>
-<div id="container-97976d73e3c6b8d3ae2df257dc5af2b1"></div>
+<div id="container-97976d73e3c6b8d3ae2df257dc5af2b1" style="text-align: center;"></div>
 	<script type="text/javascript">
 	atOptions = {
 		'key' : '1d14a85e553af02ad62e0e218125845e',
@@ -40,7 +40,7 @@
 	<script async="async" data-cfasync="false" src="//fortunatelychastise.com/78404d4cbfe5f4daf67fcb95261d91bf/invoke.js"></script>
 <div id="container-78404d4cbfe5f4daf67fcb95261d91bf"></div>
 	<h1 style="text-align: center;">Girls Waiting for you</h1>
-	<script type="text/javascript">
+	<script type="text/javascript" style="text-align: center;">
 	atOptions = {
 		'key' : '487059e48a9fb5be7c77fa77fe5c6f1b',
 		'format' : 'iframe',
@@ -51,7 +51,7 @@
 </script>
 <script type="text/javascript" src="//fortunatelychastise.com/487059e48a9fb5be7c77fa77fe5c6f1b/invoke.js"></script>
 	<h1 style="text-align: center;">Best Clips Hot</h1>
-	<script type="text/javascript">
+	<script type="text/javascript" style="text-align: center;">
 	atOptions = {
 		'key' : 'dc4916492761ce5cc27025a495fec04e',
 		'format' : 'iframe',
@@ -62,7 +62,7 @@
 </script>
 <script type="text/javascript" src="//fortunatelychastise.com/dc4916492761ce5cc27025a495fec04e/invoke.js"></script>
 	<h1 style="text-align: center;">Love You</h1>
-	<script type="text/javascript">
+	<script type="text/javascript" style="text-align: center;">
 	atOptions = {
 		'key' : '88e8ff9404abc563c248f6e77f96005f',
 		'format' : 'iframe',
