--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<h1 style="text-align: center;">Best Clips</h1>
 	<script async="async" data-cfasync="false" src="//fortunatelychastise.com/c2a1f65263c7acc5a096027dee0b199b/invoke.js"></script>
 <div id="container-c2a1f65263c7acc5a096027dee0b199b"></div>
+	<h1 style="text-align: center;">
 	<script type="text/javascript" style="text-align: center;">
 	atOptions = {
 		'key' : '4131bf1619c86c2ef2e4dbc957be0be9',
@@ -18,9 +19,11 @@
 	};
 </script>
 <script type="text/javascript" src="//fortunatelychastise.com/4131bf1619c86c2ef2e4dbc957be0be9/invoke.js"></script>
+	</h1>
 	<h1 style="text-align: center;">Best Hot Clips</h1>
 	<script async="async" data-cfasync="false" src="//fortunatelychastise.com/97976d73e3c6b8d3ae2df257dc5af2b1/invoke.js"></script>
 <div id="container-97976d73e3c6b8d3ae2df257dc5af2b1" style="text-align: center;"></div>
+	<h1 style="text-align: center;">
 	<script type="text/javascript">
 	atOptions = {
 		'key' : '1d14a85e553af02ad62e0e218125845e',
@@ -31,13 +34,14 @@
 	};
 </script>
 <script type="text/javascript" src="//fortunatelychastise.com/1d14a85e553af02ad62e0e218125845e/invoke.js"></script>
+	</h1>
 	<h1 style="text-align: center;">Never Stop</h1>
 	<script async="async" data-cfasync="false" src="//fortunatelychastise.com/d486d3d6061c304e0d6aedcdc2b69cf4/invoke.js"></script>
 <div id="container-d486d3d6061c304e0d6aedcdc2b69cf4"></div>
 	<h1 style="text-align: center;">Watch Next</h1>
 	<script async="async" data-cfasync="false" src="//fortunatelychastise.com/78404d4cbfe5f4daf67fcb95261d91bf/invoke.js"></script>
 <div id="container-78404d4cbfe5f4daf67fcb95261d91bf"></div>
-	<h1 style="text-align: center;">Girls Waiting for you</h1>
+	<h1 style="text-align: center;">Girls Waiting for you<br>
 	<script type="text/javascript" style="text-align: center;">
 	atOptions = {
 		'key' : '487059e48a9fb5be7c77fa77fe5c6f1b',
@@ -48,7 +52,8 @@
 	};
 </script>
 <script type="text/javascript" src="//fortunatelychastise.com/487059e48a9fb5be7c77fa77fe5c6f1b/invoke.js"></script>
-	<h1 style="text-align: center;">Best Clips Hot</h1>
+	</h1>
+	<h1 style="text-align: center;">Best Clips Hot<br>
 	<script type="text/javascript" style="text-align: center;">
 	atOptions = {
 		'key' : 'dc4916492761ce5cc27025a495fec04e',
@@ -59,7 +64,8 @@
 	};
 </script>
 <script type="text/javascript" src="//fortunatelychastise.com/dc4916492761ce5cc27025a495fec04e/invoke.js"></script>
-	<h1 style="text-align: center;">Love You</h1>
+	</h1>
+	<h1 style="text-align: center;">Love You <br>
 	<script type="text/javascript" style="text-align: center;">
 	atOptions = {
 		'key' : '88e8ff9404abc563c248f6e77f96005f',
@@ -70,5 +76,6 @@
 	};
 </script>
 <script type="text/javascript" src="//fortunatelychastise.com/88e8ff9404abc563c248f6e77f96005f/invoke.js"></script>
+	</h1>
  </body>
 </html>
